# FastISM

./: .gitmodules  CMakeLists.txt  Makefile  README.md  cal.py  chart.py  imgui.ini  test.sh  test_sizes.py  vim
images/: getpics.sh
include/: CPUBGR2Gray.h  CpuTimer.h  CudaCheck.h  CudaMath.h  GpuTimer.cuh  Laplacian.cuh  Reduce.cuh  SMD.cuh  Tenengrad.cuh  ThrustHelper.h
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/core/include/: GPUBGR2Gray.cuh  Laplacian.cuh  SMD.cuh  Tenengrad.cuh
lib/core/include/core/: CPUBGR2Gray.h  GPUBGR2Gray.cuh  Laplacian.cuh  Reduce.cuh  SMD.cuh  Tenengrad.cuh
lib/ui/: CMakeLists.txt
lib/ui/include/: UI.h  app.h  compute.h  dialog.h  file_chooser.h  method_types.h
lib/ui/include/ui/: app.h  buttons.h  compute.h  dialog.h  method_types.h
lib/utils/: CMakeLists.txt
lib/utils/include/: CpuTimer.h  CudaCheck.h  CudaMath.cuh  GpuTimer.cuh  ThrustHelper.cuh
lib/utils/include/utils/: CpuTimer.h  CudaCheck.h  CudaMath.cuh  GpuTimer.cuh  ThrustHelper.cuh
scripts/: test_caps.sh  test_sizes.py
src/: Laplacian.cu  SMD.cu  Tenengrad.cu  main.cpp  main.cu
